# pr_review

./: .env.example  .env.railway  .gitignore  .railwayignore  ACTION_REQUIRED.md  API_KEY_CREATION_GUIDE.md  BUILD_FIX_GUIDE.md  CLOUDFLARE_COMPLETE_GUIDE.md  CLOUDFLARE_DEPLOY_NOW.md  CLOUDFLARE_WORKERS_SUMMARY.md  DEMO.md  DEPLOY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FRONTEND_DEPLOY_STEPS.md  GITHUB_ACTIONS_FIX.md  HOW_IT_WORKS.md  LIVE.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOY_NOW.md  RAILWAY_FIX_SUMMARY.md  README.md  SECURITY_INCIDENT.md  STREAMLIT_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  demo_mode.py  deploy-setup.bat  deploy-setup.sh  main.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  readme.md  (+7 more)
.github/workflows/: deploy.yml.disabled  pr_review.yml
artifacts/: example_review.json
frontend/: .env.example  .env.production  README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: NewReviewModal.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: api.ts  workers-api.ts
frontend/src/pages/: Dashboard.tsx  ReviewForm.tsx  ReviewResults.tsx  Settings.tsx
scripts/: troubleshoot.sh
src/: __init__.py  analyze_code.py  ci_integration.py  config.py  fetch_prs.py  main.py  repo_checkout.py  review_generator.py  scoring.py  server.py  utils.py
src/providers/: __init__.py  gemini_provider.py  llm_provider.py
tests/: __init__.py  test_review_schema.py  test_scoring.py
workers/: .gitignore  README.md  deploy.ps1  deploy.sh  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
