[metadata]
name = pr_review_agent
version = 1.0.0
description = Automated Pull Request Review Agent with static analysis and intelligent feedback
long_description = file: README.md
long_description_content_type = text/markdown
author = Development Team
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir = = src
python_requires = >=3.10
install_requires =
    requests>=2.31.0
    gitpython>=3.1.32
    google-generativeai>=0.3.0
    flask>=2.3.2
    python-dotenv>=1.0.0
    pydantic>=2.0.0
    rich>=13.4.2
    bandit>=1.7.5
    radon>=6.0.1
    flake8>=6.0.0
    pyflakes>=3.0.1
    colorlog>=6.7.0
    click>=8.1.3
    tenacity>=8.2.2

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = venv, .git, __pycache__, .pytest_cache

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[bandit]
exclude_dirs = tests, venv
skips = B101